complete addVNode